--- a/html/style.css
+++ b/html/style.css
@@ -2,13 +2,17 @@ body {
     background: rgb(21,21,21) url(img/bg.jpg) fixed;
     background-size: contain;
     color: #fff;
-    font-family: Lora, serif;
+    font-family: 'Crete Round', serif;
     text-align: center;
 }
 a {
     color: white;
     text-decoration: underline;
 }
+img {
+    max-width: 100%;
+}
+
 .tagline {
     list-style: none;
     margin: 0;
@@ -38,10 +42,4 @@ a {
 }
 .work {
     margin: 2em 0;
-}
-
-@media (min-width: 768px) {
-    .logo {
-        margin: 3em 0;
-    }
 }
