--- a/html/style.css
+++ b/html/style.css
@@ -30,6 +30,10 @@ img {
 .con span {
     color: #a2a2a2;
 }
+.map-link {
+    font-size: 0.7em;
+    color: #a2a2a2;
+}
 .logo {
     margin: 2em 0;
 }
